2011-05-05  Chang Shu  <cshu@webkit.org>

        Reviewed by Andreas Kling.

        [Qt][WK2] Support PageGroup in QGraphicsWKView/QWKPage constructors
        https://bugs.webkit.org/show_bug.cgi?id=59638

        1. Call QGraphicsWKView constructor with pageGroupRef.
        2. Disable setFontFamily calls as it breaks Qt test fonts.

        * WebKitTestRunner/TestController.cpp:
        (WTR::TestController::resetStateToConsistentValues):
        * WebKitTestRunner/qt/PlatformWebViewQt.cpp:
        (WTR::WebView::WebView):
        (WTR::PlatformWebView::PlatformWebView):

2011-05-05  Joseph Pecoraro  <joepeck@webkit.org>

        Reviewed by David Kilzer.

        Add --only-webkit option to build-webkit
        https://bugs.webkit.org/show_bug.cgi?id=60245

        * Scripts/build-webkit: If --only-webkit was specified
        just build the WebKit project, and not its dependencies.

2011-05-05  Jeff Miller  <jeffm@apple.com>

        Reviewed by Darin Adler.

        Add didNotHandleWheelEvent callback to WKPageUIClient
        https://bugs.webkit.org/show_bug.cgi?id=60203

        * MiniBrowser/gtk/BrowserWindow.c:
        (browserWindowUIClientInit): Stub out didNotHandleWheelEvent callback.
        * MiniBrowser/mac/BrowserWindowController.m:
        (-[BrowserWindowController awakeFromNib]): Stub out didNotHandleWheelEvent callback.
        * MiniBrowser/win/BrowserView.cpp:
        (BrowserView::create): Stub out didNotHandleWheelEvent callback.
        * WebKitTestRunner/TestController.cpp:
        (WTR::TestController::createOtherPage): Stub out didNotHandleWheelEvent callback.
        (WTR::TestController::initialize): Stub out didNotHandleWheelEvent callback.

2011-05-04  Eric Seidel  <eric@webkit.org>

        Reviewed by Adam Barth.

        Add more missing imports from scm refactor
        https://bugs.webkit.org/show_bug.cgi?id=60239

        * Scripts/webkitpy/common/checkout/scm/git.py:
        * Scripts/webkitpy/common/checkout/scm/svn.py:
